<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:orientation="vertical"
    android:layout_marginBottom="5dp"
    >

    <TextView
        android:id="@+id/displayQuestion"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.76"
        android:gravity="bottom"
        android:text="@string/question"
        android:textAlignment="center"
        android:textSize="17sp" />

    <RadioGroup
        android:id="@+id/radioBtnGroup"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/answer1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="@string/answer1"
            android:visibility="invisible" />

        <RadioButton
            android:id="@+id/answer2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="@string/answer2"
            android:visibility="invisible" />

        <RadioButton
            android:id="@+id/answer3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="@string/answer3"
            android:visibility="invisible" />
    </RadioGroup>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="172dp"
        android:layout_weight="0.25">

        <Button
            android:id="@+id/startBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:onClick="startAction"
            android:text="@string/start" />

        <Button
            android:id="@+id/nextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/startBtn"
            android:onClick="nextAction"
            android:text="@string/next"
            android:visibility="invisible" />

    </RelativeLayout>

</LinearLayout>
