<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/Score_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:text="@string/your_score"
        android:layout_marginStart="77dp"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="24dp"
        android:layout_toEndOf="@+id/Score_text"
        android:text="@string/_0"
        android:textColor="@color/colorScore"
        android:textSize="30dp" />

    <Button
        android:id="@+id/Startover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="34dp"
        android:onClick="onStartOver"
        android:text="@string/start_over" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Startover"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="38dp"
        android:onClick="onShareBtn"
        android:text="Share" />
</RelativeLayout>
